--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,8 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel build
     - name: Build and publish
       run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+        python -m build
